--- a/example-release/jobs/web_server/templates/index.html.erb
+++ b/example-release/jobs/web_server/templates/index.html.erb
@@ -144,15 +144,21 @@
         'configured.port',
         'configured.smtp_authentication',
         'configured.ca_certificate',
-        'configured.record_collection',
-        'configured.selector',
-        'configured.simple_credentials.identity',
-        'configured.simple_credentials.password',
-        'configured.secret',
-        'configured.rsa_cert_credentials.public_key_pem',
-        'configured.rsa_cert_credentials.cert_and_private_key_pems',
         'configured.example_vm_type_dropdown_value',
         'configured.example_disk_type_dropdown_value',
+        'configured.record_collection',
+        'configured.selector',
+        'configured.selector_specific_option',
+        'configured.selector_value',
+        'configured.top_level_secret',
+        'configured.concat_secrets',
+        'configured.secret',
+        'configured.secret_ternary',
+        'configured.secret_or',
+        'configured.rsa_cert_credentials.public_key_pem',
+        'configured.rsa_cert_credentials.cert_and_private_key_pems',
+        'configured.simple_credentials.identity',
+        'configured.simple_credentials.password',
       ].each do |property| %>
         <dt><%= property %></dt>
         <dd>
