--- a/example-product/metadata/example-product.yml.erb
+++ b/example-product/metadata/example-product.yml.erb
@@ -1,6 +1,6 @@
 <% product_name = "example-product#{suffix}" -%>
 ---
-name: <%= product_name %>
+name: <%= product_name.parameterize %>
 product_version: <%= version.inspect %>
 minimum_version_for_upgrade: "0"
 metadata_version: "2.3"
