Backport suffix and parameterize name logic
[nostory]

Signed-off-by: Kashyap Vedurmudi <kvedurmudi@pivotal.io>

--- a/example-product/metadata/example-product.yml.erb
+++ b/example-product/metadata/example-product.yml.erb
@@ -1,4 +1,4 @@
-<% product_name = "example-product#{suffix}" -%>
+<% product_name = "example-product #{suffix}".parameterize -%>
 ---
 name: <%= product_name %>
 product_version: <%= version.inspect %>
