--- a/example-product/metadata/example-product.yml.erb
+++ b/example-product/metadata/example-product.yml.erb
@@ -9,7 +9,7 @@ description: An example product to demonstrate Ops Manager product-author featur
 rank: 1
 service_broker: false # Default value
 stemcell_criteria:
-  os: ubuntu-trusty
+  os: <%= stemcell_os.inspect %>
   version: <%= stemcell_version.inspect %>
 
   # allows you to opt-out of the default behaviour of Ops Manager 1.8+ to always
