Expose more credentials in example web server
[#158044343] Test the official certificate rotation workflow in a system spec on 1 IaaS

Signed-off-by: Nick Webb <nwebb@pivotal.io>

--- a/example-release/jobs/web_server/templates/index.html.erb
+++ b/example-release/jobs/web_server/templates/index.html.erb
@@ -76,6 +76,7 @@
         'generated.secret.present',
         'generated.secret.value',
         'generated.uuid',
+        'generated.root_rsa_certificate',
       ].each do |property| %>
       <dt><%= property %></dt>
       <dd><pre><%= p(property) %></pre></dd>
