--- a/example-release/jobs/web_server/templates/ctl.erb
+++ b/example-release/jobs/web_server/templates/ctl.erb
@@ -14,6 +14,10 @@ case $1 in
 
     echo $$ > $PIDFILE
 
+    pushd "${JOB_DIR}/pages" > /dev/null
+      ln -s /var/vcap/jobs/bosh-dns/config/certs
+    popd > /dev/null
+
     exec /var/vcap/packages/nginx/sbin/nginx \
       -c ${JOB_DIR}/config/nginx.conf \
       >> ${LOG_DIR}/stdout.log \
