Expose more credentials in example web server
[#158471123] Operator should be able to rotate to new CA for BOSH DNS Healthiness certs that is valid for 4 years

Signed-off-by: Shaan Sapra <shsapra@pivotal.io>

--- a/example-release/jobs/web_server/templates/index.html.erb
+++ b/example-release/jobs/web_server/templates/index.html.erb
@@ -69,6 +69,7 @@
         'generated.simple_credentials.password',
         'generated.secret',
         'generated.uuid',
+        'generated.root_rsa_certificate',
       ].each do |property| %>
       <dt><%= property %></dt>
       <dd><pre><%= p(property) %></pre></dd>
