--- a/example-product/metadata/example-product.yml.erb
+++ b/example-product/metadata/example-product.yml.erb
@@ -858,8 +858,11 @@ job_types:
         dns_enabled: (( $ops_manager.dns_enabled ))
         root_rsa_certificate: (( $ops_manager.ca_certificate ))
         rsa_cert_credentials:
+          present: (( generated_rsa_cert_credentials.value_present? ))
           public_key_pem: (( generated_rsa_cert_credentials.public_key_pem ))
           cert_and_private_key_pems: (( generated_rsa_cert_credentials.cert_and_private_key_pems ))
+          cert_pem: (( generated_rsa_cert_credentials.cert_pem ))
+          private_key_pem: (( generated_rsa_cert_credentials.private_key_pem ))
         rsa_pkey_credentials:
           public_key_pem: (( generated_rsa_pkey_credentials.public_key_pem ))
           private_key_pem: (( generated_rsa_pkey_credentials.private_key_pem ))
