Opt-in to syslog for example-product
[#161094029] Operators should see syslog being correctly delivered when they opt-in to syslog delivery for a tile

--- a/example-product/metadata/example-product.yml.erb
+++ b/example-product/metadata/example-product.yml.erb
@@ -8,6 +8,7 @@ label: 'Ops Manager: Example Product<%= suffix ? " #{suffix}" : nil%>'
 description: An example product to demonstrate Ops Manager product-author features
 rank: 1
 service_broker: false # Default value
+opsmanager_syslog: true
 stemcell_criteria:
   os: <%= stemcell_os.inspect %>
   version: <%= stemcell_version.inspect %>
