--- a/example-runtime-config-product/metadata/example-runtime-config-product.yml.erb
+++ b/example-runtime-config-product/metadata/example-runtime-config-product.yml.erb
@@ -1,9 +1,9 @@
 ---
-name: example-runtime-config-product
-product_version: "1.0.0"
+name: <%= product_name %>
+product_version: <%= version.inspect %>
 minimum_version_for_upgrade: "0"
-metadata_version: "2.0"
-label: 'Ops Manager: Example Runtime Config Product'
+metadata_version: "2.5"
+label: 'Ops Manager: Example Runtime Config Product<%= suffix ? " #{suffix}" : nil%>'
 description: An example runtime config only product to demonstrate that runtime config only tiles work
 rank: 1
 releases:
