Add a new build tile script
Add help text and additional flags for output format

Add support for all types of products

Default stemcell os and version to that which appears in installation

Refactor build.sh to work with erb metadata

Signed-off-by: Brian Upton <bupton@pivotal.io>

--- a/example-runtime-config-product/metadata/example-runtime-config-product.yml.erb
+++ b/example-runtime-config-product/metadata/example-runtime-config-product.yml.erb
@@ -1,9 +1,9 @@
 ---
-name: example-runtime-config-product
-product_version: 2.3.0
+name: <%= product_name %>
+product_version: <%= version.inspect %>
 minimum_version_for_upgrade: "0"
 metadata_version: "2.3"
-label: 'Ops Manager: Example Runtime Config Product'
+label: 'Ops Manager: Example Runtime Config Product<%= suffix ? " #{suffix}" : nil%>'
 description: An example runtime config only product to demonstrate that runtime config only tiles work
 rank: 1
 releases:
