Add cpu accessor for job manifest
[#163462295] Allow `cpu` to be used as an accessor for jobs

Signed-off-by: Shaan Sapra <shsapra@pivotal.io>

--- a/example-product/metadata/example-product.yml.erb
+++ b/example-product/metadata/example-product.yml.erb
@@ -992,6 +992,7 @@ job_types:
       ops_manager_provided_accessors:
         name: (( name ))
         ram: (( ram ))
+        cpu: (( cpu ))
         ephemeral_disk: (( ephemeral_disk ))
         persistent_disk: (( persistent_disk ))
         instances: (( instances ))
