--- a/example-product/metadata/example-product.yml.erb
+++ b/example-product/metadata/example-product.yml.erb
@@ -396,6 +396,9 @@ property_blueprints:
         type: secret
         configurable: true
         optional: true
+        constraints:
+          - must_match_regex: '^[a-zA-Z]{20,}$'
+            error_message: 'This secret must be at least 20 letters'
       - name: secret_meaning_rsa_cert_credentials
         type: rsa_cert_credentials
         configurable: true
