Update secret_meaning regex to match secret generation pattern
[#159629595] Operator should not be able to set a secret that does not match the required regex.

Signed-off-by: Shaan Sapra <shsapra@pivotal.io>

--- a/example-product/metadata/example-product.yml.erb
+++ b/example-product/metadata/example-product.yml.erb
@@ -394,7 +394,7 @@ property_blueprints:
         configurable: true
         optional: true
         constraints:
-          - must_match_regex: '^[a-zA-Z]{20,}$'
+          - must_match_regex: '^[\w\- _]{20,}$'
             error_message: 'This secret must be at least 20 letters'
       - name: secret_meaning_rsa_cert_credentials
         type: rsa_cert_credentials
