Add default to stemcell_selector property to ensure tile is green
[#164618389] Tile authors can upload tiles that support multiple stemcells (and get/put in API)

Signed-off-by: Brian Upton <bupton@pivotal.io>

--- a/example-product/metadata/example-product.yml.erb
+++ b/example-product/metadata/example-product.yml.erb
@@ -898,6 +898,7 @@ job_types:
     - type: stemcell_selector
       name: example_stemcell_selector
       configurable: true
+      default: <%= stemcell_os.inspect %>
     manifest: |
       credhub:
         concatenated_password: prefix-((( credhub-password )))-suffix
