Add stemcell selector examples to example release
[#164620834] Tile authors should be to use **all** stemcells for the product in their ODB deployments

Signed-off-by: Ming Xiao <mxiao@pivotal.io>

--- a/example-release/jobs/web_server/templates/index.html.erb
+++ b/example-release/jobs/web_server/templates/index.html.erb
@@ -185,6 +185,18 @@
     <% end %>
     </dl>
 
+    <h2>Stemcell Selector</h2>
+    <dl>
+    <% [
+         'stemcell_selector.os',
+         'stemcell_selector.version',
+         'stemcell_selector.value_present',
+       ].each do |property| %>
+        <dt><%= property %></dt>
+        <dd><%= p(property) %></dd>
+    <% end %>
+    </dl>
+
     <h2>Director Provided Accessors:</h2>
     <dl>
     <% [
