Update template to conditionally show stemcell_selector os and version
[#164620834] Tile authors should be to use **all** stemcells for the product in their ODB deployments

Signed-off-by: Ming Xiao <mxiao@pivotal.io>

--- a/example-release/jobs/web_server/templates/index.html.erb
+++ b/example-release/jobs/web_server/templates/index.html.erb
@@ -187,11 +187,9 @@
 
     <h2>Stemcell Selector</h2>
     <dl>
-    <% [
-         'stemcell_selector.os',
-         'stemcell_selector.version',
-         'stemcell_selector.value_present',
-       ].each do |property| %>
+    <% stemcell_selector_properties = ['stemcell_selector.value_present'] %>
+    <% stemcell_selector_properties += ['stemcell_selector.os', 'stemcell_selector.version'] if p('stemcell_selector.value_present') == true %>
+    <% stemcell_selector_properties.each do |property| %>
         <dt><%= property %></dt>
         <dd><%= p(property) %></dd>
     <% end %>
