--- a/example-product/metadata/example-product.yml.erb
+++ b/example-product/metadata/example-product.yml.erb
@@ -1029,6 +1029,8 @@ job_types:
       stemcell_selector:
         os: (( .web_server.example_stemcell_selector.os ))
         version: (( .web_server.example_stemcell_selector.version ))
+        assigned: (( .web_server.example_stemcell_selector.assigned? ))
+        value: (( .web_server.example_stemcell_selector.value ))
         value_present: (( .web_server.example_stemcell_selector.value_present? ))
   - name: no_op
     resource_label: No Operation
