--- a/example-release/jobs/web_server/templates/index.html.erb
+++ b/example-release/jobs/web_server/templates/index.html.erb
@@ -188,7 +188,7 @@
     <h2>Stemcell Selector</h2>
     <dl>
     <% stemcell_selector_properties = ['stemcell_selector.value_present'] %>
-    <% stemcell_selector_properties += ['stemcell_selector.os', 'stemcell_selector.version'] if p('stemcell_selector.value_present') == true %>
+    <% stemcell_selector_properties += ['stemcell_selector.value', 'stemcell_selector.os', 'stemcell_selector.version', 'stemcell_selector.assigned'] if p('stemcell_selector.value_present') == true %>
     <% stemcell_selector_properties.each do |property| %>
         <dt><%= property %></dt>
         <dd><%= p(property) %></dd>
