--- a/example-product/metadata/example-product.yml.erb
+++ b/example-product/metadata/example-product.yml.erb
@@ -146,6 +146,9 @@ form_types:
       - reference: .web_server.example_stemcell_selector
         label: Example stemcell selector
         description: 'Select which stemcell you want to use'
+      - reference: .web_server.example_stemcell_selector_with_default
+        label: Example stemcell selector with a default
+        description: 'Select which stemcell you want to use (defaults to xenial)'
   - name: example_collections_form
     label: 'Collection example'
     description: 'A collection example form'
@@ -899,6 +902,10 @@ job_types:
       name: example_stemcell_selector
       configurable: true
       optional: true
+    - type: stemcell_selector
+      name: example_stemcell_selector_with_default
+      configurable: true
+      default: 'ubuntu-xenial'
     manifest: |
       credhub:
         concatenated_password: prefix-((( credhub-password )))-suffix
