Update example product to use `use_stemcell`
- When the selector value is set to "Filet Mignon", the no-op job will
require the use of the windows stemcell if any instances are deployed

[#165459218] When the instance count for a job is 0, it should not count towards the usage of that stemcell for uploading/assigning purposes

Signed-off-by: Brian Upton <bupton@pivotal.io>

--- a/example-product/metadata/example-product.yml.erb
+++ b/example-product/metadata/example-product.yml.erb
@@ -1049,10 +1049,15 @@ job_types:
     max_in_flight: 100%
     single_az_only: false
     default_internet_connected: false
+    use_stemcell: windows2016
     instance_definition:
       name: instances
       configurable: true
       default: 0
+      zero_if:
+        property_reference: .properties.example_selector
+        property_values:
+          - Filet Mignon
     resource_definitions:
       - name: ram
         configurable: true
