Switch `use_stemcell` to be the primary stemcell
- We added `use_stemcell` to the no-op job thinking it was a safe way to
  exercise the 0 instance behavior. However, our system specs explicitly
  set the no-op job to 2 instances. Thus, we've temporarily set it to be
  the same as the primary stemcell so that these specs don't have to be
  rewritten to upload a second stemcell.

Signed-off-by: Kashyap Vedurmudi <kvedurmudi@pivotal.io>

--- a/example-product/metadata/example-product.yml.erb
+++ b/example-product/metadata/example-product.yml.erb
@@ -1049,7 +1049,7 @@ job_types:
     max_in_flight: 100%
     single_az_only: false
     default_internet_connected: false
-    use_stemcell: windows2016
+    use_stemcell: <%= stemcell_os.inspect %>
     instance_definition:
       name: instances
       configurable: true
