Set defaults for non configurable fields
[#166590961] Non-configurable collection record properties should not require configuration in the UI/API

Signed-off-by: Brian Upton <bupton@pivotal.io>

--- a/example-product/metadata/example-product.yml.erb
+++ b/example-product/metadata/example-product.yml.erb
@@ -386,9 +386,11 @@ property_blueprints:
     property_blueprints:
       - name: album
         type: string
+        default: 'Hello'
         freeze_on_deploy: true
       - name: artist
         type: string
+        default: 'World'
         freeze_on_deploy: true
       - name: explicit
         type: boolean
