--- a/example-release/config/private.yml.erb
+++ b/example-release/config/private.yml.erb
@@ -1,5 +1,6 @@
 ---
 blobstore:
-  s3:
+  provider: s3
+  options:
     access_key_id: <%= aws_access_key_id %>
     secret_access_key: <%= aws_secret_access_key %>
