Add generated certificate to variables
[#166690781] Alana is able to see all credhub managed certificates on the deployed certificates endpoint

Signed-off-by: Ming Xiao <mxiao@pivotal.io>

--- a/example-product/metadata/example-product.yml.erb
+++ b/example-product/metadata/example-product.yml.erb
@@ -42,6 +42,11 @@ variables:
     type: user
   - name: generated-salted-creds-migrated-to-credhub
     type: user
+  - name: generated-certificate-migrated-to-credhub
+    type: certificate
+    options:
+      common_name: example.common
+      is_ca: true
 
 post_deploy_errands:
   - name: example-errand
