Add default values for the properties of the runtime config tile
[#168001614] AWS Fifth Gen schema migration fails on runtime config tiles

Signed-off-by: Ming Xiao <mxiao@pivotal.io>

--- a/example-runtime-config-product/metadata/example-runtime-config-product.yml.erb
+++ b/example-runtime-config-product/metadata/example-runtime-config-product.yml.erb
@@ -20,10 +20,10 @@ form_types:
         label: Echo Value
         description: 'Configure a value to repeatedly echo'
       - reference: .properties.sleep_value
-        label: Sleep Value 
+        label: Sleep Value
         description: 'Time to sleep between echoes'
       - reference: .properties.exit_value
-        label: Exit Value 
+        label: Exit Value
         description: 'Configure a value to echo at exit'
 
 property_blueprints:
@@ -31,6 +31,7 @@ property_blueprints:
     type: string
     configurable: true
     optional: false
+    default: 'hello'
   - name: sleep_value
     type: integer
     configurable: true
@@ -40,6 +41,7 @@ property_blueprints:
     type: string
     configurable: true
     optional: false
+    default: '0'
 
 runtime_configs:
   - name: dummy
