Example Product errands do not run by default
We almost always uncheck these options when using example product
because of the extra time it takes

[#168326334] Run bundler:audit checks on vm, system, docs, and other Gemfiles

--- a/example-product/metadata/example-product.yml.erb
+++ b/example-product/metadata/example-product.yml.erb
@@ -51,10 +51,11 @@ variables:
 post_deploy_errands:
   - name: example-errand
     colocated: false
+    run_default: off
     impact_warning: 'Vms will restart'
   - name: example_colocated_errand
     colocated: true
-    run_default: on
+    run_default: off
     instances:
       - web_server/first
     label: colocated errand on web_server
