--- a/example-product/metadata/example-product.yml.erb
+++ b/example-product/metadata/example-product.yml.erb
@@ -51,11 +51,10 @@ variables:
 post_deploy_errands:
   - name: example-errand
     colocated: false
-    run_default: off
     impact_warning: 'Vms will restart'
   - name: example_colocated_errand
     colocated: true
-    run_default: off
+    run_default: on
     instances:
       - web_server/first
     label: colocated errand on web_server
