Declare the broker product as an optional dependency
[#168181232] Tile Authors can add optional Dependencies to a tile

Signed-off-by: Shaan Sapra <shsapra@pivotal.io>

--- a/example-product/metadata/example-product.yml.erb
+++ b/example-product/metadata/example-product.yml.erb
@@ -23,6 +23,11 @@ additional_stemcells_criteria:
   - os: windows2016
     version: 1709.19
 
+requires_product_versions:
+  - name: example-broker-product
+    version: '>= 1.0-build.0'
+    optional: true
+
 releases:
   - name: example-release
     file: <%= release_file_name.inspect %>
