Exercise ((..product.present?)) in example product
[#168181702] Tile author should be able to check if an optional dependency is present

Signed-off-by: Andy Brown <anbrown@pivotal.io>

--- a/example-product/metadata/example-product.yml.erb
+++ b/example-product/metadata/example-product.yml.erb
@@ -689,6 +689,7 @@ job_types:
           product:
             deployment_name: (( ..<%= product_name %>.deployment_name ))
             network_name: (( ..<%= product_name %>.network_name ))
+            example-broker-product-present: (( ..example-broker-product.present? ))
           self:
             stemcell_version: (( $self.stemcell_version ))
     errand: true
