--- a/example-product/metadata/example-product.yml.erb
+++ b/example-product/metadata/example-product.yml.erb
@@ -39,6 +39,14 @@ releases:
     file: bpm
     version: 1.1.3
 
+install_time_verifiers:
+- name: Verifiers::HttpSuccessVerifier
+  properties:
+    host: www.google.com
+    port: 443
+    path: /
+    scheme: https
+
 variables:
   - name: credhub-password
     type: password
