Extend time_logger to print telemetry payload
[#167629702] Extend the example product to use telemetry
Signed-off-by: Ming Xiao <mxiao@pivotal.io>

--- a/example-release/jobs/time_logger/templates/ctl.erb
+++ b/example-release/jobs/time_logger/templates/ctl.erb
@@ -18,6 +18,7 @@ case $1 in
 
     exec ${JOB_DIR}/bin/time_logger.sh \
       ${PERSISTENT_LOG_DIR}/time.log \
+      ${LOG_DIR}/time.log \
       >> ${LOG_DIR}/stdout.log \
       2>> ${LOG_DIR}/stderr.log
     ;;
