Add dollar context variables to example product
[#171966462] Credhub generated variables are not scrubbed on the streaming and historical log pages

Signed-off-by: Brian Upton <bupton@pivotal.io>

--- a/example-product/metadata/example-product.yml.erb
+++ b/example-product/metadata/example-product.yml.erb
@@ -1131,15 +1131,24 @@ job_types:
         persistent_disk: (( persistent_disk ))
         instances: (( instances ))
         any_instances: (( any_instances ))
+        ca_certificate: (( $ops_manager.ca_certificate ))
+        trusted_certificates: (( $ops_manager.trusted_certificates ))
+        http_proxy: (( $ops_manager.http_proxy ))
+        https_proxy: (( $ops_manager.https_proxy ))
+        no_proxy: (( $ops_manager.no_proxy ))
+        instance_types_catalog: (( $ops_manager.instance_types_catalog ))
+        restricted_view_api_access_credentials: (( $ops_manager.restricted_view_api_access_credentials ))
       director_provided_accessors:
         hostname: (( $director.hostname ))
         deployment_ip: (( $director.deployment_ip ))
-        username_and_pass: (( .properties.example_selector_with_deployed_director_accessors.selected_option.parsed_manifest(director_deploy_accessors_snippet) ))
+        username: (( $director.username ))
+        password: (( $director.password ))
         ntp_servers: (( $director.ntp_servers ))
         ca_public_key: (( $director.ca_public_key ))
         tld: (( $director.tld ))
         bosh_metrics_forwarder_client_name: (( $director.bosh_metrics_forwarder_client_name ))
         bosh_metrics_forwarder_client_secret: (( $director.bosh_metrics_forwarder_client_secret ))
+        dns_release_present: (( $director.dns_release_present ))
       product:
         deployment_name: (( .deployment_name ))
         network_name: (( .network_name ))
