Add dollar context variables to example product
[#171966462] Credhub generated variables are not scrubbed on the streaming and historical log pages

Signed-off-by: Brian Upton <bupton@pivotal.io>

--- a/example-broker-product/metadata/example-broker-product.yml.erb
+++ b/example-broker-product/metadata/example-broker-product.yml.erb
@@ -112,6 +112,7 @@ job_types:
         stemcell_version: (( $self.stemcell_version ))
         uaa_client_name: (( $self.uaa_client_name ))
         uaa_client_secret: (( $self.uaa_client_secret ))
+        service_network: (( $self.service_network ))
 
   - name: no_op
     resource_label: No Operation
